...
                  );
                },
              );
            },
          ),
          IconButton(
            key: const Key('anadirFoto'),
            icon: const Icon(Icons.camera_alt, color: Colors.black),
            tooltip: 'Subir foto',
            onPressed: () {
              showDialog(
                context: context,
                builder: (context) {
                  return AlertDialog(
                    title: const Text('¿Cómo quieres subir la foto?'),
                    actions: [
                      TextButton(
                        key: const Key('adjuntarFoto'),
                        onPressed: () async {
                          Navigator.pop(context);
                          final XFile? pickedFile = await _picker.pickImage(
                              source: ImageSource.gallery);
                          if (pickedFile != null) {
                            final cmd = CreateEntryCommand(
...
                  actions: [
                    TextButton(
                        key: const Key('cancelarButton'),
                        onPressed: () => Navigator.pop(context),
                        child: const Text('Cancelar')),
                    TextButton(
                      key: const Key('aceptarButton'),
                      onPressed: () async {
                        final tripToDelete = currentTrip;
                        final result = await widget.tripService
                            .deleteById(tripToDelete.id);

                        if (result is Ok<Unit>) {
...
